add documentation, update profile endpoint, and level up endpoint
